<resources>
    <string name="app_name">Трекер книг</string>
    <string name="common_error">Произошла ошибка</string>
    <string name="save">Сохранить</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>

    <string name="authorization_screen_title">Авторизация</string>
    <string name="authorization_screen_login_hint">Логин</string>
    <string name="authorization_screen_password_hint">Пароль</string>
    <string name="authorization_screen_button">Войти</string>
    <string name="authorization_screen_login_error">Неправильный логин или пароль</string>
    <string name="authorization_screen_password_button">Забыли пароль?</string>
    <string name="authorization_screen_password_text">Забыли пароль? Попробуйте: admin - admin</string>

    <string name="books_list_screen_empty_list">Список пуст</string>
    <string name="books_list_screen_menu_item_cat">Факты о котах</string>
    <string name="books_list_screen_menu_item_logout">Разлогиниться</string>

    <string name="cat_dialog_title">Случайный факт о котах</string>
    <string name="cat_dialog_exit_button">Выйти</string>
    <string name="cat_dialog_more_button">Еще</string>
    <string name="cat_dialog_error">Фактов нет ;-(</string>

    <string name="book_creator_title_hint">Название</string>
    <string name="book_creator_title_author">Автор</string>
    <string name="book_creator_title_description">Описание</string>
    <string name="book_creator_save_button">@string/save</string>
    <string name="book_creator_error_empty_title">Заполните название</string>
    <string name="book_creator_error_empty_author">Заполните автора</string>

    <string name="book_viewer_title_label">Название</string>
    <string name="book_viewer_author_label">Автор</string>
    <string name="book_viewer_description_label">Описание</string>
    <string name="book_viewer_menu_item_change">Изменить</string>
    <string name="book_viewer_menu_item_delete">Удалить</string>
    <string name="book_viewer_delete_book_message">Удалить книгу?</string>
</resources>
