<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            style="@style/BookViewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_viewer_title_label" />

        <TextView
            android:id="@+id/title_view"
            style="@style/BookViewContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Harry Potter" />

        <TextView
            style="@style/BookViewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/book_viewer_author_label" />

        <TextView
            android:id="@+id/author_view"
            style="@style/BookViewContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="J. K. Rowling" />

        <TextView
            android:id="@+id/description_label_view"
            style="@style/BookViewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/book_viewer_description_label" />

        <TextView
            android:id="@+id/description_view"
            style="@style/BookViewContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="История противостояния солдата Кайла Риза и киборга-терминатора, прибывших в 1984-й год из пост-апокалиптического будущего, где миром правят машины-убийцы, а человечество находится на грани вымирания. Цель киборга: убить девушку по имени Сара Коннор, чей ещё нерождённый сын к 2029 году выиграет войну человечества с машинами. Цель Риза: спасти Сару и остановить Терминатора любой ценой." />

    </LinearLayout>
</ScrollView>